--- a/atf.css
+++ b/atf.css
@@ -1,18 +1,18 @@
 body {
-    background-color: #FFF;
-    margin: 30px;
-    margin-top: 10px;
+  background-color: black;
+  margin: 30px;
+  margin-top: 10px;
 }
 #contentContainer {
-    width: 550px;
-    height: 350px;
-    border: 5px black solid;
-    overflow: hidden;
-    background-color: #F2F2F2;
+  width: 550px;
+  height: 350px;
+  border: 5px purple solid;
+  overflow: hidden;
+  background-color: grey;
 }
 #plane {
-    position: relative;
-    transition: transform .10s linear;
-    width: 50px;
-    height: auto;
+  position: relative;
+  /* transition: transform .10s linear; */
+  width: 50px;
+  height: auto;
 }
