--- a/atf2.css
+++ b/atf2.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   background-color: black;
   margin: 30px;
   margin-top: 10px;
@@ -12,16 +12,8 @@ body {
   width: 700px;
   height: 500px;
   border: 5px grey solid;
-}
-#contentContainer {
-  box-sizing: border-box;
-  margin: 75px;
-  width: 550px;
-  height: 350px;
-  border: 5px purple solid;
-  overflow: hidden;
-  background-color: grey;
-}
+} */
+
 #plane {
   position: relative;
   /* bottom: 50px;
