--- a/atf2.css
+++ b/atf2.css
@@ -1,8 +1,9 @@
-/* body {
+body {
   background-color: black;
   margin: 30px;
   margin-top: 10px;
 }
+/*
 #content-main {
   display: flex;
   justify-content: center;
@@ -12,8 +13,8 @@
   width: 700px;
   height: 500px;
   border: 5px grey solid;
-} */
-
+}
+*/
 #plane {
   position: relative;
   /* bottom: 50px;
