made planeObj. got mousedown on plane only agn

--- a/atf2.css
+++ b/atf2.css
@@ -16,7 +16,7 @@ body {
 }
 */
 #plane {
-  position: relative;
+  /* position: relative; */
   /* bottom: 50px;
   right: 50px; */
   /* transition: transform .10s linear; */
