--- a/atf2.css
+++ b/atf2.css
@@ -3,23 +3,40 @@ body {
   margin: 30px;
   margin-top: 10px;
 }
-
 #content-main {
   display: flex;
   justify-content: center;
+  /* width: 600px;
+  height: 400px; */
 }
-/* #spawn-area {
-  box-sizing: border-box;
-  width: 700px;
-  height: 500px;
+#spawn-area {
+  /* box-sizing: border-box; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* width: 700px;
+  height: 500px; */
+  padding: 0 75px;
   border: 5px grey solid;
-} */
-
-#plane {
-  /* position: relative; */
-  /* bottom: 50px;
-  right: 50px; */
-  /* transition: transform .10s linear; */
-  width: 50px;
-  height: auto;
+  border-radius: 20px;
+}
+#contentContainer {
+  border-radius: 5px;
+  border: 5px solid #24248f;
+  background-color:#404040;
+}
+h2 {
+  color: white;
+  margin-bottom: 0;
+}
+p {
+  margin-top: 0;
+  color: grey;
+}
+#links a {
+  display: inline-block;
+  color: grey;
+  padding: 10px;
+  margin: 10px;
 }
