--- a/atf2.css
+++ b/atf2.css
@@ -1,31 +1,31 @@
 body {
-  background-color: black;
+  background-image: url(emojis/free-grunge-waterlor-stock-background-images--backgrounds-etc-15.jpeg);
+  background-size: cover;
   margin: 30px;
   margin-top: 10px;
 }
 #content-main {
   display: flex;
   justify-content: center;
-  /* width: 600px;
-  height: 400px; */
 }
 #spawn-area {
+  /* background-color: black; */
+  background-image: url(emojis/Dark-color-desktop-backgrounds.jpg);
+  /* filter: brightness(0.4); */
   /* box-sizing: border-box; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* width: 700px;
-  height: 500px; */
   padding: 0 75px;
-  border: 5px grey solid;
+  border: 3px grey solid;
   border-radius: 20px;
 }
 #contentContainer {
   border-radius: 5px;
-  border: 5px solid #24248f;
-  /* background-color:#404040; */
-  background-color:#262626;
+  border: 10px solid #24248f;
+  background-size: 640px 480px;
+  background-image: url('emojis/Dark_Colors_Background(www.3DHDWallpaper.com).jpg');
 }
 h2 {
   color: white;
