--- a/atf2.css
+++ b/atf2.css
@@ -9,10 +9,7 @@ body {
   justify-content: center;
 }
 #spawn-area {
-  /* background-color: black; */
   background-image: url(emojis/Dark-color-desktop-backgrounds.jpg);
-  /* filter: brightness(0.4); */
-  /* box-sizing: border-box; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,6 +27,15 @@ body {
 h2 {
   color: white;
   margin-bottom: 0;
+}
+a {
+  text-decoration: none
+}
+a:hover {
+  text-decoration: underline;
+}
+p:hover {
+  color: blue;
 }
 p {
   margin-top: 0;
