--- a/atf2.css
+++ b/atf2.css
@@ -27,20 +27,30 @@ body {
 h2 {
   color: white;
   margin-bottom: 0;
+  /* font-family: 'Berkshire Swash', cursive; */
+  font-family: 'Poppins', sans-serif;
 }
 a {
-  text-decoration: none
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
 }
 a:hover {
   text-decoration: underline;
 }
 p:hover {
   color: blue;
+  font-family: 'Poppins', sans-serif;
 }
 p {
   margin-top: 0;
   color: grey;
 }
+.icon {
+  height: 50px;
+  width: 50px;
+  /* background-color: orange; */
+}
+
 #links a {
   display: inline-block;
   color: grey;
